openshift/test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deployment
  labels:
    app: httpd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: httpd
          image: 'quay.io/fedora/httpd-24'
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
