openshift/backend-network.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-backend
  labels:
    app: workshop-backend
    component: api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: workshop-backend
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: workshop-backend
  labels:
    app: workshop-backend
    component: api
spec:
  to:
    kind: Service
    name: workshop-backend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
